--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     const scores = {};
     const submissions = {};
     let currentStudentId = null;
-    const googleScriptUrl = "https://script.google.com/macros/s/AKfycbxaPvbx7KHI_rb1CC8v3pQhY6GXeBPzcXrYhyUU1fIcuEAN1Q8ENio5OhL80toYOWCL/exec";
+    const googleScriptUrl = "https://script.google.com/macros/s/…/exec";
 
     const studentIdSelect = document.getElementById('studentId');
     [0, ...studentNumbers].forEach(num => {
