--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     const scores = {};
     const submissions = {};
     let currentStudentId = null;
-    const googleScriptUrl = "https://script.google.com/macros/s/…/exec";
+    const googleScriptUrl = "https://script.google.com/macros/s/AKfycbx-4kMTuQ-oyEIPyWkhAcYk5FtP7CNBrwP-LFDJbBf9cXsNATRnsOLdKDyGTujSeFzz/exec";
 
     const studentIdSelect = document.getElementById('studentId');
     [0, ...studentNumbers].forEach(num => {
