--- a/index.html
+++ b/index.html
@@ -1,61 +1,19 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>學生簡報評分系統</title>
   <style>
-    body {
-      font-family: sans-serif;
-      padding: 20px;
-      background-color: #f0f0f0;
-    }
-    h2 {
-      color: #333;
-    }
-    .student {
-      margin-bottom: 20px;
-      background: white;
-      padding: 10px;
-      border-radius: 10px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
-    }
-    .score-input {
-      width: 50px;
-    }
-    .average {
-      font-weight: bold;
-      color: green;
-    }
-    .score-list {
-      font-size: 0.9em;
-      color: #666;
-      margin-top: 5px;
-    }
-    #login-section {
-      background: white;
-      padding: 15px;
-      margin-bottom: 20px;
-      border-radius:  10px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
-    }
-    #export-button, #submit-to-google-button {
-      margin-top: 10px;
-      padding: 10px 15px;
-      font-size: 16px;
-    }
-    #teacher-summary {
-      margin-top: 30px;
-      background: #fff9e6;
-      padding: 15px;
-      border-radius: 10px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
-    }
+    body { font-family: sans-serif; padding: 20px; background-color: #f8f8f8; }
+    h2 { color: #333; }
+    .student { background: white; padding: 10px; margin-bottom: 10px; border-radius: 8px; box-shadow: 0 0 5px rgba(0,0,0,0.1); }
+    .score-input { width: 50px; }
+    .average { font-weight: bold; color: green; }
+    #login-section, #teacher-summary { background: #fff; padding: 15px; margin-bottom: 20px; border-radius: 10px; box-shadow: 0 0 5px rgba(0,0,0,0.1); }
   </style>
 </head>
 <body>
   <h2>學生簡報即時評分系統</h2>
-
   <div id="login-section">
     <label for="studentId">請選擇你的座號：</label>
     <select id="studentId">
