--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     const scores = {};
     const submissions = {};
     let currentStudentId = null;
-    const googleScriptUrl = "https://script.google.com/macros/s/AKfycbyHKctkw325LlN1K8bPI8Ex1HTiB3HVC_7LW8Yc9eXivSQNKXchGj4gmmLWMXMrWsJQ/exec";
+    const googleScriptUrl = "https://script.google.com/macros/s/AKfycbx-4kMTuQ-oyEIPyWkhAcYk5FtP7CNBrwP-LFDJbBf9cXsNATRnsOLdKDyGTujSeFzz/exec";
 
     const studentIdSelect = document.getElementById('studentId');
     [0, ...studentNumbers].forEach(num => {
@@ -107,8 +107,14 @@
           headers: { "Content-Type": "application/json" }
         })
           .then(response => response.text())
-          .then(result => console.log("已送出至 Google 試算表：", result))
-          .catch(error => console.error("送出失敗：", error));
+          .then(result => {
+            console.log("已送出至 Google 試算表：", result);
+            alert("✅ 成功送出評分：" + result);
+          })
+          .catch(error => {
+            console.error("送出失敗：", error);
+            alert("❌ 無法送出評分，請通知老師或檢查網路");
+          });
       } else {
         alert('請輸入 0~10 的分數');
       }
@@ -165,7 +171,20 @@
             submissions[target][rater] = parseFloat(score);
             scores[target] = Object.values(submissions[target]);
           });
+
           renderScoringUI();
+
+          // 新增畫面更新邏輯
+          studentNumbers.forEach(num => {
+            const avgElem = document.getElementById(`avg-${num}`);
+            const listElem = document.getElementById(`list-${num}`);
+            if (scores[num]) {
+              const avg = (scores[num].reduce((a, b) => a + b, 0) / scores[num].length).toFixed(2);
+              avgElem.textContent = `${avg} 分（共 ${scores[num].length} 人評分）`;
+              listElem.textContent = `目前評分：${Object.entries(submissions[num]).map(([k, v]) => `${k}號: ${v}`).join(', ')}`;
+            }
+          });
+
           if (currentStudentId === 0) updateTeacherStats();
         })
         .catch(err => console.error("讀取 Google 試算表失敗：", err));
